# tlessonclone

./: db.sqlite3  pyproject.toml  req.txt
mainapp/: urls.py  views.py
static/css/: style.css
templates/layouts/: auth_base.html  base.html
templates/mainapp/: index.html
templates/users/: login.html  profile.html  register.html  users.html
twitterclone/: settings.py  urls.py
users/: contexts.py  factories.py  models.py  urls.py  views.py
users/management/commands/: create_users.py
users/migrations/: 0001_initial.py  0002_alter_user_photo.py  0003_user_subscriptions.py  0004_userrequest.py  0005_userrequest_is_accept_alter_userrequest_from_user_and_more.py
users/templatetags/: check_request.py
