[tool.poetry]
name = "twitterclone"
version = "0.1.0"
description = ""
authors = ["Lisa <bakosh21345@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
Faker = "^15.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
